--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,11 +7,25 @@
 
     {%- include header.html -%}
 
+    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+         content to avoid any CSS collisions with our real content. -->
+    <div class="wrap">
+      <div class="masthead">
+        <div class="container">
+          <h3 class="masthead-title">
+            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+            <small>{{ site.tagline }}</small>
+          </h3>
+        </div>
+      </div>
+    
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
       </div>
     </main>
+
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
     {%- include footer.html -%}
 
