--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,7 +27,7 @@
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
-    <script src='{{ site.baseurl }}/public/js/script.js'></script>
+    <script src='{{ site.baseurl }}/assets/js/script.js'></script>
 
     {%- include footer.html -%}
 
