--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,9 +17,9 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css">
   
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
