--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
-  {%  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">  %}
   
     <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -17,9 +16,9 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css">
+  <link rel="stylesheet" href="{{ "/assets/css/poole.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/syntax.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/hyde.css" | relative_url }}">
   
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
