--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,9 +16,7 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ "/assets/css/poole.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/syntax.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/hyde.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/style.scss" | relative_url }}">
   
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
