--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
       <div class="footer-col">
       {%- if site.author %}
         <ul class="contact-list">
-          {% if site.author.name -%}
-            <li class="p-name">{{ site.author.name | escape }}</li>
+          {% if site.author.title -%}
+            <li class="p-name">{{ site.author.title | escape }}</li>
           {% endif -%}
           {% if site.author.email -%}
             <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
