--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,5 +30,7 @@ layout: base
     {{ content }}
   </div>
 
+  {% include utterances.html %}
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
